kj대리운전 메뉴

--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -48,7 +48,24 @@
             <i class="fas fa-chevron-right menu-arrow"></i>
           </div>
           <div class="submenu" id="proxy-driving-menu">
-            <a href="/insurance/proxy-driving/kj.html" class="submenu-item" data-menu="proxy-kj" style="padding-left: 4rem;">KJ대리운전</a>
+            <!-- KJ 대리운전 (하위 5개 페이지) -->
+            <div class="menu-item">
+              <div class="menu-title" data-target="kj-driver-menu" data-menu="proxy-kj" style="padding-left: 4rem; font-size: 0.8rem;">
+                <div>
+                  <i class="fas fa-car-side menu-icon"></i>
+                  KJ대리운전
+                </div>
+                <i class="fas fa-chevron-right menu-arrow"></i>
+              </div>
+              <div class="submenu" id="kj-driver-menu">
+                <a href="/pages/insurance/kj-driver-search.html" class="submenu-item" data-menu="kj-driver-search" style="padding-left: 6rem;">기사찾기</a>
+                <a href="/pages/insurance/kj-driver-company.html" class="submenu-item" data-menu="kj-driver-company" style="padding-left: 6rem;">대리업체</a>
+                <a href="/pages/insurance/kj-driver-endorse-list.html" class="submenu-item" data-menu="kj-driver-endorse-list" style="padding-left: 6rem;">배서리스트</a>
+                <a href="/pages/insurance/kj-driver-code-by-policy.html" class="submenu-item" data-menu="kj-driver-code-by-policy" style="padding-left: 6rem;">증권별코드</a>
+                <a href="/pages/insurance/kj-driver-policy-search.html" class="submenu-item" data-menu="kj-driver-policy-search" style="padding-left: 6rem;">증권번호찾기</a>
+              </div>
+            </div>
+
             <a href="/insurance/proxy-driving/das.html" class="submenu-item" data-menu="proxy-das" style="padding-left: 4rem;">daS대리운전</a>
             <a href="/insurance/proxy-driving/personal.html" class="submenu-item" data-menu="proxy-personal" style="padding-left: 4rem;">개인대리운전</a>
           </div>
