--- a/public/css/sj-styles.css
+++ b/public/css/sj-styles.css
@@ -2719,3 +2719,17 @@ body {
   font-size: 0.7rem;
   vertical-align: middle;
 }
+
+/* ========== KJ 대리운전 기사 찾기 테이블 컬럼 폭 ========== */
+.col-number   { width: 50px;  text-align: center; }
+.col-name     { width: 120px; }
+.col-jumin    { width: 180px; }
+.col-status   { width: 90px;  text-align: center; }
+.col-etag     { width: 110px; }
+.col-company  { width: 180px; }
+.col-insurer  { width: 100px; }
+.col-policy   { width: 150px; }
+.col-discount { width: 220px; }
+.col-phone    { width: 140px; }
+.col-date     { width: 150px; }
+.col-accident { width: 110px; text-align: center; }
