--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -23,6 +23,7 @@
       <div class="submenu" id="staff-menu">
         <a href="/pages/staff/employees.html" class="submenu-item" data-menu="staff-employees">직원리스트</a>
         <a href="/pages/staff/notices.html" class="submenu-item" data-menu="staff-notices">공지사항</a>
+        <a href="/pages/staff/employee-schedule.html" class="submenu-item" data-menu="employee-schedule">근무일정</a>
         <a href="/pages/staff/reports.html" class="submenu-item" data-menu="staff-reports">고지사항</a>
       </div>
     </div>
