--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -25,6 +25,7 @@
         <a href="/pages/staff/notices.html" class="submenu-item" data-menu="staff-notices">공지사항</a>
         <a href="/pages/staff/employee-schedule.html" class="submenu-item" data-menu="employee-schedule">근무일정</a>
         <a href="/pages/staff/holidays.html" class="submenu-item" data-menu="holidays">공휴일 관리</a>
+        <a href="/pages/staff/half-day-approval.html" class="submenu-item admin-only" data-menu="half-day-approval" data-roles="SUPER_ADMIN,SYSTEM_ADMIN,DEPT_MANAGER">반차 승인</a>
         <a href="/pages/staff/reports.html" class="submenu-item" data-menu="staff-reports">고지사항</a>
       </div>
     </div>
