--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -64,7 +64,7 @@
                 <a href="/pages/insurance/kj-driver-company.html" class="submenu-item" data-menu="kj-driver-company" style="padding-left: 6rem;">대리업체</a>
                 <a href="/pages/insurance/kj-driver-endorse-list.html" class="submenu-item" data-menu="kj-driver-endorse-list" style="padding-left: 6rem;">배서리스트</a>
                 <a href="/pages/insurance/kj-driver-code-by-policy.html" class="submenu-item" data-menu="kj-driver-code-by-policy" style="padding-left: 6rem;">증권별코드</a>
-                <a href="/pages/insurance/kj-driver-policy-search.html" class="submenu-item" data-menu="kj-driver-policy-search" style="padding-left: 6rem;">증권번호찾기</a>
+                <a href="/pages/insurance/kj-driver-policy-search.html" class="submenu-item" data-menu="kj-driver-policy-search" style="padding-left: 6rem;">갱신</a>
               </div>
             </div>
 
