프론트 작성

--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -142,6 +142,22 @@
       </div>
     </div>
 
+    <!-- 보험 운영 플랫폼 메뉴 -->
+    <div class="menu-item">
+      <div class="menu-title" data-target="tickets-menu" data-menu="tickets">
+        <div>
+          <i class="fas fa-ticket-alt menu-icon"></i>
+          보험 운영 플랫폼
+        </div>
+        <i class="fas fa-chevron-right menu-arrow"></i>
+      </div>
+      <div class="submenu" id="tickets-menu">
+        <a href="/pages/tickets/list.html" class="submenu-item" data-menu="tickets-list" style="padding-left: 2rem;">티켓 목록</a>
+        <a href="/pages/tickets/form.html" class="submenu-item" data-menu="tickets-form" style="padding-left: 2rem;">티켓 생성</a>
+        <a href="/pages/tickets/approvals.html" class="submenu-item" data-menu="tickets-approvals" style="padding-left: 2rem;">승인 대기</a>
+      </div>
+    </div>
+
     <!-- 지식 공유 메뉴 -->
     <div class="menu-item">
       <div class="menu-title" data-target="knowledge-menu" data-menu="knowledge">
