--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -152,6 +152,9 @@
         <i class="fas fa-chevron-right menu-arrow"></i>
       </div>
       <div class="submenu" id="tickets-menu">
+        <a href="/pages/tickets/about.html" class="submenu-item" data-menu="tickets-about" style="padding-left: 2rem;">
+          <i class="fas fa-info-circle menu-icon"></i> 티켓 시스템이란?
+        </a>
         <a href="/pages/tickets/list.html" class="submenu-item" data-menu="tickets-list" style="padding-left: 2rem;">티켓 목록</a>
         <a href="/pages/tickets/form.html" class="submenu-item" data-menu="tickets-form" style="padding-left: 2rem;">티켓 생성</a>
         <a href="/pages/tickets/approvals.html" class="submenu-item" data-menu="tickets-approvals" style="padding-left: 2rem;">승인 대기</a>
