--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -155,6 +155,9 @@
         <a href="/pages/tickets/about.html" class="submenu-item" data-menu="tickets-about" style="padding-left: 2rem;">
           <i class="fas fa-info-circle menu-icon"></i> 티켓 시스템이란?
         </a>
+        <a href="/pages/tickets/types-guide.html" class="submenu-item" data-menu="tickets-types-guide" style="padding-left: 2rem;">
+          <i class="fas fa-tags menu-icon"></i> 티켓 유형 가이드
+        </a>
         <a href="/pages/tickets/list.html" class="submenu-item" data-menu="tickets-list" style="padding-left: 2rem;">티켓 목록</a>
         <a href="/pages/tickets/form.html" class="submenu-item" data-menu="tickets-form" style="padding-left: 2rem;">티켓 생성</a>
         <a href="/pages/tickets/approvals.html" class="submenu-item" data-menu="tickets-approvals" style="padding-left: 2rem;">승인 대기</a>
