--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -157,10 +157,10 @@
           주요 기능
         </div>
         <a href="/pages/tickets/list.html" class="submenu-item" data-menu="tickets-list" style="padding-left: 2rem;">
-          <i class="fas fa-list menu-icon"></i> 티켓 목록
+          <i class="fas fa-list menu-icon"></i> 케이스 목록
         </a>
         <a href="/pages/tickets/form.html" class="submenu-item" data-menu="tickets-form" style="padding-left: 2rem;">
-          <i class="fas fa-plus-circle menu-icon"></i> 새 티켓 생성
+          <i class="fas fa-plus-circle menu-icon"></i> 새 케이스 생성
         </a>
         <a href="/pages/tickets/approvals.html" class="submenu-item" data-menu="tickets-approvals" style="padding-left: 2rem;">
           <i class="fas fa-check-circle menu-icon"></i> 승인 대기
