--- a/public/components/sj-sidebar.html
+++ b/public/components/sj-sidebar.html
@@ -22,6 +22,7 @@
       </div>
       <div class="submenu" id="staff-menu">
         <a href="/pages/staff/employees.html" class="submenu-item" data-menu="staff-employees">직원리스트</a>
+        <a href="/pages/staff/organization-chart.html" class="submenu-item" data-menu="organization-chart">조직도</a>
         <a href="/pages/staff/notices.html" class="submenu-item" data-menu="staff-notices">공지사항</a>
         <a href="/pages/staff/employee-schedule.html" class="submenu-item" data-menu="employee-schedule">근무일정</a>
         <a href="/pages/staff/holidays.html" class="submenu-item" data-menu="holidays">공휴일 관리</a>
